<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/boss_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/Team_A_linear_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                style="@style/TeamNameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Team_A"
                android:textColor="@color/colorForTeams"
                android:textSize="@dimen/TeamTextSize" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/ScoreButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="@dimen/paddingBottom"
                android:text="@string/zero"
                android:textColor="@color/colorText"
                android:textSize="@dimen/ScoreTextSize" />

            <Button
                android:id="@+id/addThreeForTeamA"
                style="@style/ScoreButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/plus_3_points" />

            <Button
                android:id="@+id/addTwoForTeamA"
                style="@style/ScoreButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/plus_2_points" />

            <Button
                android:id="@+id/addOneForTeamA"
                style="@style/ScoreButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/Free_Throw" />

        </LinearLayout>

        <View
            android:id="@+id/strange_line"
            android:layout_width="1dp"
            android:layout_height="310dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1 "
            android:orientation="vertical"
            android:padding="@dimen/padding"
            tools:context=".MainActivity">

            <TextView
                style="@style/TeamNameStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/Team_B"
                android:textColor="@color/colorForTeams"
                android:textSize="@dimen/TeamTextSize" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/ScoreButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="@dimen/paddingBottom"
                android:text="@string/zero"
                android:textColor="@color/colorText"
                android:textSize="@dimen/ScoreTextSize" />

            <Button
                android:id="@+id/addThreeForTeamB"
                style="@style/ScoreButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/plus_3_points" />

            <Button
                android:id="@+id/addTwoForTeamB"
                style="@style/ScoreButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/plus_2_points" />

            <Button
                android:id="@+id/addOneForTeamB"
                style="@style/ScoreButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/Free_Throw" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/who_won"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/suggest_new_game"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:textColor="@color/who_won"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/suggest_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/reset_button"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_purple"
        android:gravity="center_horizontal"
        android:textColor="@color/suggest_new_game"
        android:textSize="15sp" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/reset" />

</RelativeLayout>